tests/ui/parser/recover/recover-missing-semi-before-item.stderr
error: expected `;`, found keyword `struct`
  --> $DIR/recover-missing-semi-before-item.rs:6:16
   |
LL |     let foo = 3
   |                ^
LL |     struct Foo;
   |     ------ unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found `union`
  --> $DIR/recover-missing-semi-before-item.rs:11:16
   |
LL |     let foo = 3
   |                ^
LL |     union Foo {
   |     ----- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `enum`
  --> $DIR/recover-missing-semi-before-item.rs:18:16
   |
LL |     let foo = 3
   |                ^
LL |     enum Foo {
   |     ---- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `fn`
  --> $DIR/recover-missing-semi-before-item.rs:25:16
   |
LL |     let foo = 3
   |                ^
LL |     fn foo() {}
   |     -- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `extern`
  --> $DIR/recover-missing-semi-before-item.rs:30:16
   |
LL |     let foo = 3
   |                ^
LL |     extern fn foo() {}
   |     ------ unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `impl`
  --> $DIR/recover-missing-semi-before-item.rs:36:16
   |
LL |     let foo = 3
   |                ^
LL |     impl Foo {}
   |     ---- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `pub`
  --> $DIR/recover-missing-semi-before-item.rs:41:16
   |
LL |     let foo = 3
   |                ^
LL |     pub use bar::Bar;
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `mod`
  --> $DIR/recover-missing-semi-before-item.rs:46:16
   |
LL |     let foo = 3
   |                ^
LL |     mod foo {}
   |     --- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `type`
  --> $DIR/recover-missing-semi-before-item.rs:51:16
   |
LL |     let foo = 3
   |                ^
LL |     type Foo = usize;
   |     ---- unexpected token
   |
help: add `;` here
   |
LL |     let foo = 3;
   |                +

error: expected `;`, found keyword `fn`
  --> $DIR/recover-missing-semi-before-item.rs:59:19
   |
LL | const X: i32 = 123
   |                   ^
LL |
LL | fn main() {}
   | -- unexpected token
   |
help: add `;` here
   |
LL | const X: i32 = 123;
   |                   +

error: aborting due to 10 previous errors

